Simplified jsdoc by using more components
Also corrected some errors in doc.
