# backend/doc/swagger-api.json
@@ -243,36 +243,11 @@
                 "schema": {
                   "type": "object",
                   "required": [
-                    "username",
-                    "email",
-                    "rooms",
-                    "createdAt",
-                    "updatedAt"
+                    "post"
                   ],
                   "properties": {
-                    "username": {
-                      "type": "string",
-                      "format": "string"
-                    },
-                    "email": {
-                      "type": "string",
-                      "format": "format"
-                    },
-                    "rooms": {
-                      "type": "array",
-                      "items": {
-                        "$ref": "#/components/schemas/MongoId"
-                      }
-                    },
-                    "createdAt": {
-                      "type": "string",
-                      "format": "date-time",
-                      "example": "2017-07-21T17:32:28Z"
-                    },
-                    "updatedAt": {
-                      "type": "string",
-                      "format": "date-time",
-                      "example": "2017-07-21T17:32:28Z"
+                    "user": {
+                      "$ref": "#/components/schemas/User"
                     }
                   }
                 }
@@ -454,41 +429,11 @@
                 "schema": {
                   "type": "object",
                   "required": [
-                    "name",
-                    "users",
-                    "posts",
-                    "createdAt",
-                    "updatedAt"
+                    "room"
                   ],
                   "properties": {
-                    "name": {
-                      "type": "string",
-                      "format": "string"
-                    },
-                    "users": {
-                      "type": "array",
-                      "items": {
-                        "$ref": "#/components/schemas/MongoId"
-                      }
-                    },
-                    "posts": {
-                      "type": "array",
-                      "items": {
-                        "$ref": "#/components/schemas/MongoId"
-                      }
-                    },
-                    "createdAt": {
-                      "type": "string",
-                      "format": "date-time",
-                      "example": "2017-07-21T17:32:28Z"
-                    },
-                    "updatedAt": {
-                      "type": "string",
-                      "format": "date-time",
-                      "example": "2017-07-21T17:32:28Z"
-                    },
-                    "lastPost": {
-                      "$ref": "#/components/schemas/Post"
+                    "room": {
+                      "$ref": "#/components/schemas/Room"
                     }
                   }
                 }
@@ -503,94 +448,6 @@
           },
           "404": {
             "description": "The user or the room was not found"
-          },
-          "410": {
-            "description": "User has been deleted"
-          }
-        }
-      }
-    },
-    "/room/invite/{roomId}": {
-      "post": {
-        "tags": [
-          "room"
-        ],
-        "description": "Invite users to a room",
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "roomId",
-            "required": true,
-            "schema": {
-              "$ref": "#/components/schemas/MongoId"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "required": [
-                  "otherUsers"
-                ],
-                "properties": {
-                  "name": {
-                    "type": "string",
-                    "format": "string"
-                  },
-                  "otherUsers": {
-                    "type": "array",
-                    "description": "Other users (besides the one calling the route) to give access to the route",
-                    "items": {
-                      "$ref": "#/components/schemas/MongoId"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "204": {
-            "description": "The other users were added successfully"
-          },
-          "400": {
-            "description": "Bad request, details are returned, can be because of: MissingToken, BadAuthType, badOtherUsers (ex: Basic instead of Bearer)"
-          },
-          "401": {
-            "description": "Bad token (not created by this server or expired)"
-          },
-          "404": {
-            "description": "Some of the users were not found",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "required": [
-                    "error",
-                    "missingUsers"
-                  ],
-                  "properties": {
-                    "error": {
-                      "type": "string"
-                    },
-                    "missingUsers": {
-                      "type": "array",
-                      "description": "Users that could not be found",
-                      "items": {
-                        "$ref": "#/components/schemas/MongoId"
-                      }
-                    }
-                  }
-                }
-              }
-            }
           },
           "410": {
             "description": "User has been deleted"
@@ -804,6 +661,123 @@
             "type": "string",
             "format": "string",
             "description": "Content of the post"
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time",
+            "example": "2017-07-21T17:32:28Z"
+          },
+          "updatedAt": {
+            "type": "string",
+            "format": "date-time",
+            "example": "2017-07-21T17:32:28Z"
+          }
+        }
+      },
+      "Room": {
+        "type": "object",
+        "required": [
+          "name",
+          "users",
+          "posts",
+          "createdAt",
+          "updatedAt"
+        ],
+        "properties": {
+          "name": {
+            "type": "string",
+            "format": "string"
+          },
+          "users": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "uuid",
+              "example": "632999f5bb5e77c72e9bf905"
+            }
+          },
+          "posts": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "uuid",
+              "example": "632999f5bb5e77c72e9bf905"
+            }
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time",
+            "example": "2017-07-21T17:32:28Z"
+          },
+          "updatedAt": {
+            "type": "string",
+            "format": "date-time",
+            "example": "2017-07-21T17:32:28Z"
+          },
+          "lastPost": {
+            "type": "object",
+            "required": [
+              "user",
+              "room",
+              "content",
+              "createdAt",
+              "updatedAt"
+            ],
+            "properties": {
+              "user": {
+                "type": "string",
+                "format": "uuid",
+                "example": "632999f5bb5e77c72e9bf905"
+              },
+              "room": {
+                "type": "string",
+                "format": "uuid",
+                "example": "632999f5bb5e77c72e9bf905"
+              },
+              "content": {
+                "type": "string",
+                "format": "string",
+                "description": "Content of the post"
+              },
+              "createdAt": {
+                "type": "string",
+                "format": "date-time",
+                "example": "2017-07-21T17:32:28Z"
+              },
+              "updatedAt": {
+                "type": "string",
+                "format": "date-time",
+                "example": "2017-07-21T17:32:28Z"
+              }
+            }
+          }
+        }
+      },
+      "User": {
+        "type": "object",
+        "required": [
+          "username",
+          "email",
+          "rooms",
+          "createdAt",
+          "updatedAt"
+        ],
+        "properties": {
+          "username": {
+            "type": "string",
+            "format": "string"
+          },
+          "email": {
+            "type": "string",
+            "format": "format"
+          },
+          "rooms": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "uuid",
+              "example": "632999f5bb5e77c72e9bf905"
+            }
           },
           "createdAt": {
             "type": "string",
